<resources>
    <string name="app_name">InClass09</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_user_sign_up">UserSignUp</string>
    <string name="hint_First_Name">First Name</string>
    <string name="hint_LastName">Last Name</string>
    <string name="hint_Email">Email</string>
    <string name="hint_Password">Password</string>
    <string name="hint_CnfPass">Confirm Password</string>
    <string name="btn_SignUp">SignUp</string>
    <string name="btn_Cancel">Cancel</string>
    <string name="btn_Login">Login</string>
    <string name="title_activity_contact_main">ContactMain</string>
    <string name="btn_NewContact">Create New Contact</string>
    <string name="lbl_fname_lname">Firstname Lastname</string>
    <string name="lbl_PhNum">980-XXX-YYYY</string>
    <string name="lbl_Email">their@email.com</string>
    <string name="lbl_Name">Name</string>
    <string name="lbl_Number">Phone</string>
    <string name="btn_Submit">Submit</string>
    <string name="title_activity_contact_list">ContactListAct</string>
</resources>
